--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Rural doctor (Positive attitude)</h3>
             <p class="fst-italic">
-              He was born in 1971, in Somairpar village of Agailjhara upazila of Barisal district.His father's name was Rasmohan Barai and he was a doctor by profession. His mother's name was Sarojini Barai and she was a housewife by profession. And he got married on <a href="https://en.wikipedia.org/wiki/Wedding_anniversary" target="_blank" class="fntFamily">12 August 1997</a> with <a href="https://prothes-asp.github.io/shikharanibiswas/" target="_blank" class="fntFamily">Shikha Rani Biswas.</a> And his wife is a school teacher by profession. Prosanta Barai has two sons, elder son named <a href="https://prothesbarai.github.io/" target="_blank" class="fntFamily">Prothes Barai</a> and younger son named <a href="https://www.facebook.com/angkan.barai.50" target="_blank" class="fntFamily">Angkan Barai.</a>
+              He was born in 1971, in Somairpar village of Agailjhara upazila of Barisal district.His father's name was Rasmohan Barai and he was a doctor by profession. His mother's name was Sarojini Barai and she was a housewife by profession. And he got married on <a href="https://en.wikipedia.org/wiki/Wedding_anniversary" target="_blank" class="fntFamily">12 August 1997</a> with <a href="https://prothesbarai.github.io/shikharanibiswas/" target="_blank" class="fntFamily">Shikha Rani Biswas.</a> And his wife is a school teacher by profession. Prosanta Barai has two sons, elder son named <a href="https://prothesbarai.github.io/" target="_blank" class="fntFamily">Prothes Barai</a> and younger son named <a href="https://www.facebook.com/angkan.barai.50" target="_blank" class="fntFamily">Angkan Barai.</a>
             </p>
             <div class="row">
               <div class="col-lg-5">
@@ -111,7 +111,7 @@
               <div class="col-lg-7">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Died:</strong> <span style="color: red;">17 August 2020</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Marital-Status:</strong> <span>Married with <a href="https://prothes-asp.github.io/shikharanibiswas/" target="_blank" class="fntFamily">Shikha Rani Biswas</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Marital-Status:</strong> <span>Married with <a href="https://prothesbarai.github.io/shikharanibiswas/" target="_blank" class="fntFamily">Shikha Rani Biswas</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>prosantabarai16@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Occupation:</strong> <span> <a href="https://en.wikipedia.org/wiki/Rural_health" target="_blank" class="fntFamily">Was a rural Doctor</a></span></li>
                 </ul>
@@ -367,7 +367,7 @@
                     <a href="https://prothes-asp.github.io/shikharanibiswas/" target="_blank">
                       <img src="assets/img/FMI/Shikha.png" class="testimonial-img" alt="">
                     </a>
-                    <h3 class="fntFamily"><a href="https://prothes-asp.github.io/shikharanibiswas/" target="_blank">Shikha Rani Biswas</a></h3>
+                    <h3 class="fntFamily"><a href="https://prothesbarai.github.io/shikharanibiswas/" target="_blank">Shikha Rani Biswas</a></h3>
                     <h4 class="fntFamily">Spouse</h4>
                     <p>
                       <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -724,4 +724,5 @@
 </body>
 
 </html>
+
 
