--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     
                 <div class="swiper-slide">
                   <div class="testimonial-item">
-                    <a href="https://prothes-asp.github.io/shikharanibiswas/" target="_blank">
+                    <a href="https://prothesbarai.github.io/shikharanibiswas/" target="_blank">
                       <img src="assets/img/FMI/Shikha.png" class="testimonial-img" alt="">
                     </a>
                     <h3 class="fntFamily"><a href="https://prothesbarai.github.io/shikharanibiswas/" target="_blank">Shikha Rani Biswas</a></h3>
@@ -724,5 +724,6 @@
 </body>
 
 </html>
+
 
 
